# sgtpuzzles-extended

./: CMakeLists.txt  LICENCE  LICENSE  README.md  creek.R  creek.c  slant.c  solo.c  solo_plus.c  undead.c  undead_plus.c  unequal.c  unequal_plus.c  walls.R  walls.c
Android/: LICENCE  android.c  blackbox.c  boats.c  bridges.c  cube.c  dominosa.c  fifteen.c  filling.c  flip.c  flood.c  galaxies.c  grid.h  guess.c  inertia.c  keen.c  lightup.c  list.c  loopy.c  magnets.c  map.c  midend.c  mines.c  net.c  netslide.c  nullgame.c  pattern.c  pearl.c  pegs.c  range.c  rect.c  rome.c  salad.c  samegame.c  signpost.c  singles.c  sixteen.c  slant.c  solo.c  tents.c  (+6 more)
Android/app/src/main/java/name/boyle/chris/sgtpuzzles/: GameChooser.java
Android/app/src/main/jni/: rome.c  solo.c  undead.c
Android/app/src/main/res/values/: strings.xml
Android/jni/: Android.mk  Application.mk
Android/res/values/: arrays.xml  strings.xml
Examples/: Makefile  example_dsf.c  example_findloop.c
Unfinished/: CMakeLists.txt  alcazar.c  stellar.R  stellar.c  walls.c
Unfinished/Android/app/src/main/java/name/boyle/chris/sgtpuzzles/: SmallKeyboard.java
Unfinished/Android/app/src/main/jni/: boats.c  list.c  salad.c  slant.c  unequal.c
Unfinished/Android/app/src/main/res/values/: game_props.xml
docs/: creek.md  solo_plus.md  stellar.md  undead_plus.md  unequal_plus.md  walls.md
savefiles/: creek.sav  undead_plus.sav  unequal_plus.sav  walls.sav
